--- a/src/Containers/Contact/Contact.module.css
+++ b/src/Containers/Contact/Contact.module.css
@@ -18,6 +18,7 @@
   background-repeat: no-repeat;
   background-size: auto;
   margin-bottom: 40px;
+  margin-top: 90px;
   /* filter: grayscale(100%); */
 }
 
