--- a/src/hoc/Layout/Layout.module.css
+++ b/src/hoc/Layout/Layout.module.css
@@ -1,5 +1,3 @@
 .Content {
-  margin-top: 72px;
-  margin: 30px;
-  margin-bottom: 120px;
+  margin: 80px 30px 120px 30px;
 }
